Transform Feline Digital Solutions into a fully 3D experience using Three.js

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,12 +9,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&display=swap" rel="stylesheet">
-    <meta name="description" content="Feline Digital Solutions provides agile, precise, and elegant technology services.">
+    <meta name="description"
+        content="Feline Digital Solutions provides agile, precise, and elegant technology services.">
 </head>
+
 <body>
     <div class="noise-overlay"></div>
+    <canvas id="three-canvas"></canvas>
     <div class="cursor-glow"></div>
-    
+
     <nav>
         <div class="logo">FELINE<span>.DIGITAL</span></div>
         <div class="nav-links">
@@ -27,21 +31,21 @@
         <section class="hero">
             <div class="hero-content">
                 <h1 class="reveal-text">Transforming Ideas into <span></span>Digital Excellence</span></h1>
-                <p class="subtitle">Where creativity meets results. We build extraordinary digital experiences through innovation and technology.</p>
+                <p class="subtitle">Where creativity meets results. We build extraordinary digital experiences through
+                    innovation and technology.</p>
                 <div class="cta-group">
                     <a href="#services" class="btn-main">Our Services</a>
                     <a href="#contact" class="btn-secondary">Let's Talk</a>
                 </div>
-            </div>
-            <div class="hero-visual">
-                <div class="abstract-shape"></div>
             </div>
         </section>
 
         <section id="about" class="about">
             <div class="section-tag">About Us</div>
             <h2>Agile Solutions for <span>Modern Growth</span></h2>
-            <p>At Feline Digital Solutions, we transform ideas into powerful digital experiences. From web and app development to custom software solutions, we help startups, small businesses, and corporates grow through innovation and technology. Let’s build something extraordinary together.</p>
+            <p>At Feline Digital Solutions, we transform ideas into powerful digital experiences. From web and app
+                development to custom software solutions, we help startups, small businesses, and corporates grow
+                through innovation and technology. Let’s build something extraordinary together.</p>
         </section>
 
         <section id="services" class="services">
@@ -86,6 +90,7 @@
         <p>&copy; 2026 Feline Digital Solutions. All Rights Reserved.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
+
 </html>
