Add social links and contact section with premium styling

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <div class="nav-links">
             <a href="#services">Services</a>
             <a href="#about">About</a>
+            <a href="https://x.com/Joe_Black_Jack" target="_blank" rel="noopener">X</a>
+            <a href="https://www.instagram.com/abdullah._dev/" target="_blank" rel="noopener">IG</a>
+            <a href="https://www.linkedin.com/company/feline-media-marketing/" target="_blank" rel="noopener">LI</a>
             <a href="#contact" class="btn-primary">Connect</a>
         </div>
     </nav>
@@ -83,11 +86,46 @@
                     <p>Professional Editing and Accounting services for seamless business growth.</p>
                 </div>
             </div>
-        </section>
+            <section id="contact" class="contact">
+                <div class="section-tag">Contact Us</div>
+                <h2>Let's Build <span>Something Extraordinary</span></h2>
+                <div class="contact-container">
+                    <form id="contact-form" class="contact-form">
+                        <div class="form-group">
+                            <input type="text" id="name" name="name" placeholder="Your Name" required>
+                        </div>
+                        <div class="form-group">
+                            <input type="email" id="email" name="email" placeholder="Your Email" required>
+                        </div>
+                        <div class="form-group">
+                            <textarea id="message" name="message" placeholder="How can we help?" required></textarea>
+                        </div>
+                        <button type="submit" class="btn-main">Send Message</button>
+                    </form>
+                    <div class="contact-info">
+                        <p>Ready to move with feline precision? Reach out to us directly or follow our journey.</p>
+                        <div class="social-circles">
+                            <a href="https://x.com/Joe_Black_Jack" target="_blank" class="social-circle">X</a>
+                            <a href="https://www.instagram.com/abdullah._dev/" target="_blank"
+                                class="social-circle">IG</a>
+                            <a href="https://www.linkedin.com/company/feline-media-marketing/" target="_blank"
+                                class="social-circle">LI</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
     </main>
 
     <footer>
-        <p>&copy; 2022 Feline Digital Solutions. All Rights Reserved.</p>
+        <div class="footer-content">
+            <div class="footer-logo">FELINE<span>.DIGITAL</span></div>
+            <div class="footer-socials">
+                <a href="https://x.com/Joe_Black_Jack" target="_blank">Twitter / X</a>
+                <a href="https://www.instagram.com/abdullah._dev/" target="_blank">Instagram</a>
+                <a href="https://www.linkedin.com/company/feline-media-marketing/" target="_blank">LinkedIn</a>
+            </div>
+        </div>
+        <p class="copyright">&copy; 2022 Feline Digital Solutions. All Rights Reserved.</p>
     </footer>
 
     <script type="module" src="script.js"></script>
