Fix contact section design and HTML structural integrity

--- a/index.html
+++ b/index.html
@@ -86,9 +86,13 @@
                     <p>Professional Editing and Accounting services for seamless business growth.</p>
                 </div>
             </div>
-            <section id="contact" class="contact">
-                <div class="section-tag">Contact Us</div>
-                <h2>Let's Build <span>Something Extraordinary</span></h2>
+        </section>
+
+        <section id="contact" class="contact">
+            <div class="section-tag">Contact Us</div>
+            <h2>Let's Build <span>Something Extraordinary</span></h2>
+
+            <div class="contact-card">
                 <div class="contact-container">
                     <form id="contact-form" class="contact-form">
                         <div class="form-group">
@@ -102,18 +106,30 @@
                         </div>
                         <button type="submit" class="btn-main">Send Message</button>
                     </form>
+
                     <div class="contact-info">
-                        <p>Ready to move with feline precision? Reach out to us directly or follow our journey.</p>
-                        <div class="social-circles">
-                            <a href="https://x.com/Joe_Black_Jack" target="_blank" class="social-circle">X</a>
-                            <a href="https://www.instagram.com/abdullah._dev/" target="_blank"
-                                class="social-circle">IG</a>
-                            <a href="https://www.linkedin.com/company/feline-media-marketing/" target="_blank"
-                                class="social-circle">LI</a>
+                        <div class="info-item">
+                            <h4>Direct Reach</h4>
+                            <p>hello@feline.digital</p>
+                        </div>
+                        <div class="info-item">
+                            <h4>Current Focus</h4>
+                            <p>Taking on select projects for Q2 2026.</p>
+                        </div>
+                        <div class="info-item">
+                            <h4>Social Synergy</h4>
+                            <div class="social-circles">
+                                <a href="https://x.com/Joe_Black_Jack" target="_blank" class="social-circle">X</a>
+                                <a href="https://www.instagram.com/abdullah._dev/" target="_blank"
+                                    class="social-circle">IG</a>
+                                <a href="https://www.linkedin.com/company/feline-media-marketing/" target="_blank"
+                                    class="social-circle">LI</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </section>
+            </div>
+        </section>
     </main>
 
     <footer>
