Remove cyber attack and matrix themes, implement clean modern design

--- a/index.html
+++ b/index.html
@@ -14,24 +14,21 @@
 </head>
 
 <body>
-    <div class="noise-overlay"></div>
-    <canvas id="three-canvas"></canvas>
-    <div class="cursor-glow"></div>
+
 
     <nav>
-        <div class="logo">FELINE<span>.DIGITAL</span></div>
+        <a href="#home" class="logo">FELINE<span>.DIGITAL</span></a>
         <div class="nav-links">
-            <a href="#services">Services</a>
+            <a href="#home">Home</a>
             <a href="#about">About</a>
-            <a href="https://x.com/Joe_Black_Jack" target="_blank" rel="noopener">X</a>
-            <a href="https://www.instagram.com/abdullah._dev/" target="_blank" rel="noopener">IG</a>
-            <a href="https://www.linkedin.com/company/feline-media-marketing/" target="_blank" rel="noopener">LI</a>
+            <a href="#services">Services</a>
+            <a href="#how-we-work">Process</a>
             <a href="#contact" class="btn-primary">Connect</a>
         </div>
     </nav>
 
     <main>
-        <section class="hero">
+        <section id="home" class="hero">
             <div class="hero-wrapper">
                 <div class="hero-layer layer-bg" data-speed="0.2">
                     <div class="hero-bg-visual"></div>
@@ -40,7 +37,8 @@
                 <div class="hero-layer layer-content" data-speed="0.5">
                     <div class="hero-content">
                         <h1 class="reveal-text">Transforming Ideas into <span>Digital Excellence</span></h1>
-                        <p class="subtitle">Where creativity meets results. We build extraordinary digital experiences through
+                        <p class="subtitle">Where creativity meets results. We build extraordinary digital experiences
+                            through
                             innovation and technology.</p>
                         <div class="cta-group">
                             <a href="#services" class="btn-main">Our Services</a>
@@ -63,38 +61,145 @@
         </section>
 
         <section id="services" class="services">
-            <div class="section-tag">Services</div>
-            <h2>Tailored Digital <span>Capabilities</span></h2>
-            <div class="services-grid">
-                <div class="service-card">
-                    <div class="service-icon">📱</div>
-                    <h3>Mobile Dev</h3>
-                    <p>Android & iOS Development built for performance and scale.</p>
+            <div class="container">
+                <div class="section-tag">Expertise</div>
+                <h2>Strategic <span>Solutions</span> Designed to Scale</h2>
+                <div class="services-grid">
+                    <div class="service-card">
+                        <h3>Digital Transformation</h3>
+                        <p>Modernizing core business processes through bespoke software and cloud-native integration.
+                        </p>
+                    </div>
+                    <div class="service-card">
+                        <h3>Mobile Ecosystems</h3>
+                        <p>High-performance Android and iOS applications built for seamless user engagement.</p>
+                    </div>
+                    <div class="service-card">
+                        <h3>Web & SaaS Architecture</h3>
+                        <p>Next-gen web platforms focused on scalability, speed, and premium user experience.</p>
+                    </div>
+                    <div class="service-card">
+                        <h3>Product Design</h3>
+                        <p>Human-centric UI/UX design that bridges the gap between technology and emotion.</p>
+                    </div>
+                    <div class="service-card">
+                        <h3>Cloud Engineering</h3>
+                        <p>Robust infrastructure management and technical architecture for the modern web.</p>
+                    </div>
+                    <div class="service-card">
+                        <h3>Digital Growth</h3>
+                        <p>Data-driven marketing precision and technical content strategies to amplify your reach.</p>
+                    </div>
                 </div>
-                <div class="service-card">
-                    <div class="service-icon">💻</div>
-                    <h3>Web & SaaS</h3>
-                    <p>Modern Web Development and Cloud-native SaaS solutions.</p>
+            </div>
+        </section>
+
+        <section id="why-choose-us" class="why-us">
+            <div class="container">
+                <div class="section-tag">Philosophy</div>
+                <h2>Built for <span>Performance</span>, Designed for Impact</h2>
+                <div class="benefits-grid">
+                    <div class="benefit-item">
+                        <div class="benefit-content">
+                            <h3>Precision Engineering</h3>
+                            <p>We leverage cutting-edge tech stacks to ensure your digital solutions are fast, stable,
+                                and future-proof.</p>
+                        </div>
+                    </div>
+                    <div class="benefit-item">
+                        <div class="benefit-content">
+                            <h3>Agile Methodology</h3>
+                            <p>Our process is iterative and transparent, ensuring we deliver value quickly while
+                                adapting to your needs.</p>
+                        </div>
+                    </div>
+                    <div class="benefit-item">
+                        <div class="benefit-content">
+                            <h3>Premium Quality</h3>
+                            <p>From the UI to the backend architecture, we prioritize excellence to make your brand
+                                stand out.</p>
+                        </div>
+                    </div>
+                    <div class="benefit-item">
+                        <div class="benefit-content">
+                            <h3>Partner Mindset</h3>
+                            <p>We don't just work for you; we work with you as a dedicated extension of your business
+                                team.</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="service-card">
-                    <div class="service-icon">🎨</div>
-                    <h3>UX Design</h3>
-                    <p>User Experience Design (UED) that prioritizes the human element.</p>
+            </div>
+        </section>
+
+        <section id="how-we-work" class="how-we-work">
+            <div class="container process-container">
+                <div class="process-left">
+                    <div class="sticky-content">
+                        <div class="section-tag">Process</div>
+                        <h2>Our <span>Step-by-Step</span> <br>Engine of Success</h2>
+                        <p class="process-desc">We follow a rigorous yet flexible workflow to ensure every project
+                            exceeds expectations.</p>
+                        <div class="step-indicator">
+                            <span class="step-num active" data-step="1">01</span>
+                            <span class="step-num" data-step="2">02</span>
+                            <span class="step-num" data-step="3">03</span>
+                            <span class="step-num" data-step="4">04</span>
+                        </div>
+                    </div>
                 </div>
-                <div class="service-card">
-                    <div class="service-icon">☁️</div>
-                    <h3>Cloud Solutions</h3>
-                    <p>Robust Cloud Application Development and technical infrastructure.</p>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">📈</div>
-                    <h3>Digital Strategy</h3>
-                    <p>Digital Marketing and content precision through Technical Writing.</p>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">⚡</div>
-                    <h3>Operations</h3>
-                    <p>Professional Editing and Accounting services for seamless business growth.</p>
+                <div class="process-right">
+                    <div class="process-step" data-step="1">
+                        <div class="step-header">
+                            <span class="mobile-num">01</span>
+                            <h3>Discovery & Strategy</h3>
+                        </div>
+                        <p>We dive deep into your business goals, target audience, and market landscape to build a
+                            robust roadmap for success.</p>
+                        <ul class="step-list">
+                            <li>Market Analysis</li>
+                            <li>User Personas</li>
+                            <li>Technical Feasibility</li>
+                        </ul>
+                    </div>
+                    <div class="process-step" data-step="2">
+                        <div class="step-header">
+                            <span class="mobile-num">02</span>
+                            <h3>Design & Prototyping</h3>
+                        </div>
+                        <p>Our designers craft high-fidelity prototypes that balance aesthetic elegance with functional
+                            precision.</p>
+                        <ul class="step-list">
+                            <li>Wireframing</li>
+                            <li>UI/UX Design</li>
+                            <li>Interactive Prototypes</li>
+                        </ul>
+                    </div>
+                    <div class="process-step" data-step="3">
+                        <div class="step-header">
+                            <span class="mobile-num">03</span>
+                            <h3>Development & Testing</h3>
+                        </div>
+                        <p>We build your solution using state-of-the-art technologies, ensuring security, performance,
+                            and scalability.</p>
+                        <ul class="step-list">
+                            <li>Clean Architecture</li>
+                            <li>Agile Sprints</li>
+                            <li>QA Automation</li>
+                        </ul>
+                    </div>
+                    <div class="process-step" data-step="4">
+                        <div class="step-header">
+                            <span class="mobile-num">04</span>
+                            <h3>Launch & Evolution</h3>
+                        </div>
+                        <p>Deployment is just the beginning. We provide continuous support and data-driven optimizations
+                            for long-term growth.</p>
+                        <ul class="step-list">
+                            <li>Cloud Deployment</li>
+                            <li>Maintenance Support</li>
+                            <li>Performance Analytics</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
@@ -145,7 +250,7 @@
 
     <footer>
         <div class="footer-content">
-            <div class="footer-logo">FELINE<span>.DIGITAL</span></div>
+            <a href="#home" class="footer-logo">FELINE<span>.DIGITAL</span></a>
             <div class="footer-socials">
                 <a href="https://x.com/Joe_Black_Jack" target="_blank">Twitter / X</a>
                 <a href="https://www.instagram.com/abdullah._dev/" target="_blank">Instagram</a>
